Fix layout responsive on mobile

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -9,11 +9,7 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
 	display: none !important;
 }
-/*
-.ng-invalid.ng-dirty {
-	border-color: #FA787E;
+
+.screenshot {
+	margin-top: 5px;
 }
-.ng-valid.ng-dirty {
-	border-color: #78FA89;
-}
-*/
